--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logololy.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -19,14 +20,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rahul Bhatia</title>
+    <title>Hasta Prayuna Lolita</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
 <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
 <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
 <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
   
 <script src="%PUBLIC_URL%/js/modernizr.js"></script>
-<title>Sample resume</title>
+<title>Web Portfolio</title>
   </head>
   <body>
     <noscript>
