--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <meta name="google-site-verification" content="kg8wAEq9sHJNf86nKGtuwt0LPMdYMIiEtJe6sn0PDe4" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hasta Prayuna Lolita</title>
+    <title>Lolita's Project Site</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
 <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
 <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
